--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,8 +6,8 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-span .group {
-	background: #815fcf;
+.group {
+	background-color: #815fcf;
 }
 
 html, body, div, span, applet, object,
